# AnandCraft

./: .gitignore  AnandCraft  Block.cpp  Block.h  BlockCoordinate.h  BlockCoords.h  BlockDemo.cpp  BlockDemo.h  CMakeLists.txt  Camera.h  Chunk.h  ChunkCoordinate.cpp  ChunkCoordinate.h  ChunkCoords.cpp  ChunkCoords.h  ChunkSystem.cpp  ChunkSystem.h  Component.h  DispatchQueue.cpp  DispatchQueue.h  Entity.h  EntityArchetype.h  Game.cpp  Game.h  Grid.cpp  Grid.h  GridChunk.cpp  GridChunk.h  Job.h  JobQueue.h  LICENSE  Mesh.cpp  Mesh.h  Model.h  Player.h  PlayerController.cpp  PlayerController.h  README.md  Ray.h  Renderable.h  (+11 more)
Async/: AsyncQueue.cpp  AsyncQueue.h  SyncQueue.h  ThreadQueue.cpp  ThreadQueue.h
Graphics/: Camera.h  Mesh.cpp  Mesh.h  Model.h  Renderable.h  Transform.h
World/: BlockGrid.cpp  BlockGrid.h  ChunkCoords.cpp  ChunkData.h  ChunkSystem.cpp  ChunkSystem.h  Grid.cpp  Grid.h  GridChunk.cpp  GridChunk.h  OldWorld.cpp  OldWorld.h  World.cpp  World.h  WorldConfig.h
cmake/: FindGLEW.cmake
res/: basic_vert.glsl
src/: Block.cpp  Block.h  BlockDemo.cpp  BlockDemo.h  Entity.cpp  Entity.h  Event.h  EventDispatcher.h  EventListener.h  EventQueue.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  ID.h  Player.cpp  Player.h  PlayerController.cpp  PlayerController.h  Ray.h  RaycastEvent.cpp  RaycastEvent.h  SaveError.h  Scene.cpp  Scene.h  SceneCoordinator.cpp  SceneCoordinator.h  globals.cpp  globals.h  main.cpp  stb_image.h  util.cpp  util.h
src/Async/: SyncQueue.cpp  SyncQueue.h  ThreadQueue.cpp  ThreadQueue.h
src/Graphics/: Camera.h  Mesh.cpp  Mesh.h  (+3 more)
(+31 files in other folders)
